--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,14 +1,19 @@
-.contactList {
-  display: flex;
-  flex-direction: column;
-  padding: 18px;
-  gap: 10px;
-  border: 4px solid black;
-  border-radius: 18px;
-  width: 350px;
+.contactGallery {
+  display: flex; /* Используем flexbox для размещения элементов */
+  flex-wrap: wrap; /* Позволяем элементам оборачиваться на новую строку */
+  justify-content: space-between; /* Равномерное распределение карточек */
 }
+
+.contactList {
+  list-style: none; /* Убираем стандартные маркеры списка */
+  padding: 0; /* Убираем отступы по умолчанию */
+  margin: 0; /* Убираем внешние отступы */
+  display: flex; /* Делаем список flex-контейнером для размещения карточек в ряд */
+  flex-wrap: wrap; /* Позволяем карточкам оборачиваться на новую строку */
+  gap: 20px; /* Отступы между карточками */
+}
+
 .contactItem {
-  border: 1px solid black;
-  border-radius: 10px;
-  padding: 5px 10px;
+  flex: 0 1 calc(20% - 20px); /* Устанавливаем ширину карточек на 20% с учетом отступов */
+  box-sizing: border-box; /* Учитываем отступы в ширине карточки */
 }
