--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,31 +1,21 @@
-.searchBox {
+.user {
   display: flex;
   align-items: center;
-  border: 2px solid #ffffff;
-  border-radius: 5px;
-  padding: 5px;
-  width: 400px;
-}
-.search {
-  background-color: transparent;
-  border: none;
-  outline: none;
   color: #ffffff;
-  padding: 5px 10px;
+  gap: 25px;
   font-size: 20px;
-  width: 400px;
 }
-.button {
+
+.logout {
   background-color: #61dafb;
   color: #000;
   border: none;
-  padding: 5px 10px;
+  padding: 10px 15px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 20px;
   transition: background-color 0.3s, color 0.3s;
 }
-
-.button:hover {
+.logout:hover {
   background-color: #21a1f1;
 }
