--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,40 +1,48 @@
 .form {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding: 18px;
-  gap: 10px;
-  border: 4px solid black;
-  border-radius: 18px;
-  width: 350px;
 }
+
 .formList {
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  width: 100%;
+  margin-right: 20px;
 }
+
 .inputList {
-  padding: 4px 5px;
-  border-radius: 18px;
-  border: none;
-  color: black;
-  font-weight: normal;
+  width: 350px;
+  padding: 15px;
+  font-size: 18px;
+  border-radius: 8px;
+  border: 2px solid #007bff;
 }
-.error {
-  color: red;
-  font-weight: bolder;
-}
-.addButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  background-color: #687dd8;
+
+.label {
+  font-size: 18px;
   font-weight: bold;
+  margin-bottom: 10px;
+  color: #333;
 }
-.addButton:hover,
-.addButton:focus {
-  transition: border-color 0.25s;
-  border-color: black;
+
+.addButton {
+  padding: 8px 25px;
+  background-color: #28a745;
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.addButton:hover {
+  background-color: #218838;
+}
+
+.error {
+  color: #e63946;
+  font-size: 14px;
+  margin-top: 5px;
 }
